Add probability model plots

--- a/report/report.tex
+++ b/report/report.tex
@@ -546,9 +546,9 @@ Again, since all graphs do not overfit on either dataset, this suggests that the
   \caption{Cross Entropy using both hot and rival streaks.}\label{fig:probability-hr-crossentropy}
 \endminipage
 \end{figure}
-\label{fig:probability-accuracies}
+\label{fig:probability-crossentropies}
 
-The cross entropies are shown in figure~\ref{fig:probability-accuracies} where there does not seem to be any anomalies with respect to the corresponding accuracies.
+The cross entropies are shown in figure~\ref{fig:probability-crossentropies} where there does not seem to be any anomalies with respect to the corresponding accuracies.
 
 
 \section{Conclusion}
