Final commit before submission

--- a/report/research.bib
+++ b/report/research.bib
@@ -43,9 +43,45 @@
   note = {Accessed: 2017-02-02}
 }
 
+@misc{bracket-visual,
+  title = {Github Page},
+  howpublished = {\url{https://github.com/Counterfly/predicted_bracket_generator},}
+  note = {Accessed: 2017-02-21}
+}
+
+
 @inproceedings{bashuk2012using,
   title={Using cumulative win probabilities to predict NCAA basketball performance},
   author={Bashuk, Mark and Intelligence, Business},
   booktitle={Proc. MIT Sloan Sports Analytics Conf.},
   year={2012}
+}
+
+@inproceedings{huang2010neural,
+  title={A neural network method for prediction of 2006 world cup football game},
+  author={Huang, Kou-Yuan and Chang, Wen-Lung},
+  booktitle={Neural Networks (IJCNN), The 2010 International Joint Conference on},
+  pages={1--8},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{mccabe2008artificial,
+  title={Artificial intelligence in sports prediction},
+  author={McCabe, Alan and Trevathan, Jarrod},
+  booktitle={Information Technology: New Generations, 2008. ITNG 2008. Fifth International Conference on},
+  pages={1194--1197},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{loeffelholz2009predicting,
+  title={Predicting NBA games using neural networks},
+  author={Loeffelholz, Bernard and Bednar, Earl and Bauer, Kenneth W and others},
+  journal={Journal of Quantitative Analysis in Sports},
+  volume={5},
+  number={1},
+  pages={1--15},
+  year={2009},
+  publisher={bepress}
 }
