--- a/report/report.tex
+++ b/report/report.tex
@@ -14,10 +14,10 @@
 \begin{document}
 
 \title{Applying Deep Learning to predict Bracketology for NCAA's March Madness
-\author{Loyzer, Mark \texttt{loyzer@cs.toronto.edu}}
-\affil{Department of Computer Science
-University of Toronto
-Toronto, Ontario, Canada}
+\author[1]{Loyzer, Mark \texttt{loyzer@cs.toronto.edu}}
+\author[2]{Seward, Neil \texttt{neil.seward@uoit.ca}}
+\affil[1]{University of Toronto}
+\affil[2]{University of Ontario Institute of Technology}
 }
 
 
@@ -27,7 +27,7 @@ Toronto, Ontario, Canada}
 \newcommand{\fix}{\marginpar{FIX}}
 \newcommand{\new}{\marginpar{NEW}}
 
-%\nipsfinalcopy % Uncomment for camera-ready version
+\nipsfinalcopy % Uncomment for camera-ready version
 
 \maketitle
 
